--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,4 +11,4 @@ author:
   url: "https://www.ztyang.com"
   QQ: "2251513837"
   email: "yang2210670@163.com"
-  github: "https://github.com/ztyangt/goAPI"
+  github: "https://github.com/ztyangt/"
